# bipevo

./: .gitignore  README.md
bipevo_pkg/: README.md  setup.cfg
bipevo_pkg/src/bipevo/: __init__.py  requirements.txt
bipevo_pkg/src/bipevo/differential_evolution/: __init__.py  env_differential_evolution.py
bipevo_pkg/src/bipevo/simulation/: __init__.py  env_simulation.py
bpmsim/: README.md
bpmsim/bpmsim_files/BPMSIM_package/: LICENSE.txt  README.txt  setup.py
bpmsim/bpmsim_files/BPMSIM_package/bpmsim/: ANDjoin.py  ANDsplit.py  XORjoin.py  XORsplit.py  __init__.py  activity.py  element.py  end.py  import_BPMN.py  instance.py  intermediate.py  resources.py  simulation.py  start.py
bpmsim/bpmsim_files/Demonstration/: Credit Application Clerk.bpmn  Credit Application CreditOfficer.bpmn  DEMONSTRATION_info.xlsx  DEMONSTRATION_info_credit.xlsx  DEMONSTRATION_output_credit.csv  Demonstration_Code.py  Order Fulfillment.bpmn
usage_demo/: demo.py
usage_demo/resources/: credit-check.bpmn
