[metadata]
name = bipevo
version = 0.0.4
author = Aaron Kurz
author_email = aaronkurz@posteo.de
description = A package to optimize resource allocation in business processes using differential evolution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aaronkurz/bipevo
project_urls =
    Bug Tracker = httppython -m pip install --upgrade pips://github.com/aaronkurz/bipevo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
python_requires = >=3.6
install_requires =
    scipy==1.7.3
    matplotlib==3.5.1
    openpyxl==3.0.9

[options.packages.find]
where = src
include = *

